--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -137,7 +137,7 @@ a:hover {text-decoration:underline;}
 					<td class="no"></td>
 					<td class="link"><a href="layout.html?loading" target="_blank">loading 샘플</a></td>
 					<td class="td_url"></td>
-					<td class="work ing"></td>
+					<td class="work end"></td>
 					<td class="bgo"></td>
 				</tr>
 				<tr class="depth">
