--- a/src/layout.html
+++ b/src/layout.html
@@ -188,6 +188,25 @@
 				</div>
 			</div>
 		</div>
+		<div class="loading_layer">
+			<div class="loading_item_wrap">
+				<div class="loading_item">
+					<div class="loading_ico">
+						<div class="dot-spinner">
+							<div class="dot-spinner__dot"></div>
+							<div class="dot-spinner__dot"></div>
+							<div class="dot-spinner__dot"></div>
+							<div class="dot-spinner__dot"></div>
+							<div class="dot-spinner__dot"></div>
+							<div class="dot-spinner__dot"></div>
+							<div class="dot-spinner__dot"></div>
+							<div class="dot-spinner__dot"></div>
+							</div>
+					</div>
+					<div class="loading_text">LOADING</div>
+				</div>
+			</div>
+		</div>
 		<script>
 			menuRock("#one_depth_01");
 
